# playground

./: .gitignore
banner/: globals.css  index.html  main.js
bn/: README.md  angular.json  package.json
bn/src/: globals.css  index.html  main.ts
bn/src/app/: app.routes.ts  app.ts
bn/src/app/landing/: landing.page.html  landing.page.ts
bn/src/core/: websocket.ts
bn/src/core/components/toast/: toast.html  toast.ts
boids/: .rustfmt.toml  Cargo.toml
boids/game_lib/: Cargo.toml
boids/game_lib/src/: lib.rs
boids/src/: main.rs
gobblet-gobblers/: readme.md
nvim_color_gen/: README.md  angular.json  package-lock.json  package.json
nvim_color_gen/src/app/: app.html  app.ts
nvim_color_gen/src/app/preview/: Palette.types.ts  PaletteGeneratorService.ts  preview.component.html  preview.component.scss  preview.component.ts  rust_tokenizer.ts
tic-tac-toe-rl/: .rustfmt.toml  Cargo.toml  out.ron
tic-tac-toe-rl/src/: main.rs
tic-tac-toe-rl/src/ai/: ai_model.rs
tic-tac-toe-rl/src/game/: game_board.rs  mod.rs  setup.rs  update.rs
tree-bodies/: Cargo.toml  readme.md
tree-bodies/src/: .rustfmt.toml  main.rs
